--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,3 @@
-/*----------------------------------
-|
-|	General Stylings
-|
-----------------------------------*/
-
 /*General-------------------------*/
 
 	*{
@@ -18,8 +12,14 @@
 
 	body{
 		color:#444;
-		font-family:verdana;
+		font-family: Arial, sans-serif;
+		font-size: 14px;
 	}
+	
+	a {
+		text-decoration: none;
+		color: black;
+	}	
 
 /*Header---------------------------*/
 
@@ -27,8 +27,43 @@
 		/*vertical, then horizontal*/
 		width:900px;
 		margin:0px auto;
+		
+		background-color: rgb(220, 220, 220); /*#c6fff1*/
+
+		position: absolute;
+		top: 0;
+		left: 0;
+		
+		width: 100%;
+		height: 50px;
 	}
 
+	header * {
+		margin: 10px;
+	}
+
+	header input {
+		float:left;
+		width: 400px;
+	}
+
+	header a {
+		float: right;
+	}
+
+/*Footer---------------------------*/
+
+	footer {
+		background-color: rgb(190, 190, 190);
+		
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		
+		height: 100px;
+		width: 100%;
+	}
+	
 /*Main-----------------------------*/
 
 	#main{
