--- a/css/claim.css
+++ b/css/claim.css
@@ -1,6 +1,6 @@
 .container > div {
-	border: 1px solid rgb(213, 213, 213);
-	padding: 10px;
+	border: 1px solid #CCCCCC;
+	/*padding: 10px;*/
 }
 
 .container h2 {
@@ -19,36 +19,72 @@
 
 #evidenceContent {
 	border-left: 5px solid blue;
+	background-color: #F2F2F2;
+	padding: 10px;
+}
+
+#evidenceContent dt {
+	font-weight: bold;
+	float: left;
+	clear: left;
+}
+
+#evidenceContent dd {
+	margin-left: 75px;
+}
+
+.evidenceTags {
+/*	background-color: pink;*/
 }
 
 #scoreContent {
 	border-left: 5px solid green;
+	background-color: #F2F2F2;
+}
 
+#scoreContent h3 {
+	padding: 10px;
+	border-bottom: 1px solid #CCCCCC;
+	color: green;
+	font-size: 20px;
+}
+
+#scoreContent h3 span{
+	color: darkgrey;
+	font-size: 15px;
 }
 
 #discussionContent {
 	border-left: 5px solid red;
-
 }
 
-#scoreMap, #scoreDistrubution{
+#scoreMap {
+	margin: 10px;
+}
+
+#scoreMap, #scoreDistrubution, #evidenceContent{
 	overflow: hidden;
 }
 
 #scoreDistrubution{
 	width: 280px;
-	height: 80px;
+	height: 65px;
 }
 
-#scoreDistrubution p{
+#scoreDistrubution div {
 	width: 40px;
-	height: 80px;
+	height: 65px;
 	float: left;
-	background-color: darkgrey;
-	background-image: url(../img/kudosCircles.png);
-	background-size: 101%;
+	/*background-color: darkgrey;*/
 	position: relative;
-	background-position: -1px -1px;
+}
+
+.circle {
+	width: 10px;
+	height: 10px;
+	background-color: darkgrey;
+	border-radius: 5px;
+	margin: 5px auto;
 }
 
 #scoreControl label {
