--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -26,11 +26,11 @@ li {
 	font-size: 18pt;
 }
 
-.container > div {
+.scoreContainer > div {
 	border: 1px solid rgb(213, 213, 213);
 }
 
-.container h2 {
+.scoreContainer h2 {
 	width: 140px;
 }
 
@@ -59,11 +59,9 @@ li {
 #evidenceContent dd {
 	margin-left: 75px;
 }
-
 #scoreContent {
 	overflow: hidden;
 }
-
 #averageScore {
 	font-size: 20pt;
 	color: #A0A340;
@@ -84,6 +82,8 @@ li {
 #discussionContent {
 	border-left: 5px solid red;
 }
+
+
 
 #leftCol {
 	float: left;
@@ -152,7 +152,6 @@ li {
 	text-align: center;
 	font-size: 22pt;
 }
-
 #rightCol {
 	float: left;
 	width: 49.8%;
