--- a/css/profile.css
+++ b/css/profile.css
@@ -1,32 +1,37 @@
-	
+ul {
+	float: left;
+	width: 960px;
+}
 
+li {
+	width: 110px;
+	height: 90px;
+	border: 1px;
+	padding: 2px;
+	opacity: 0.8;
+	list-style-type: none;
+	float: left;
+}
 
+li:hover {
+	opacity: 1;
+}
 
+#main a {
+	color: rgb(21, 0, 60);
+}
 
-	ul {
-		float: left;
-		width: 960px;
-	}
+.rating {
+	float: left;
+	margin: 10px;
+}
 
-	li {
-		width: 150px;
-		height: 90px;
-		border: 1px
-		padding: 2px;
-		opacity: 0.8;
-		list-style-type: none;
-		float: left;
-	}
+.container {
+	float: left;
+	width: 100%;
+	margin-top: 10px;
+}
 
-	li:hover {
-		opacity: 1;
-	}
-
-	.rating {
-		float: left;
-		margin: 10px;
-	}
-
-	#submissions, #comments {
-		float: left;
-	}
+.threadContainer {
+	margin-top: 10px;
+}
