--- a/css/general.css
+++ b/css/general.css
@@ -132,20 +132,19 @@ footer {
 }
 	
 /*SignupPopup------------------------*/
-input[type=submit], input[type=button] {
+input {
 	opacity: 0.6;
 }
 
-input[type=submit]:hover, input[type=button]:hover {
+input {
 	opacity: 1;
 }
 
-#signupPopup, #loginPopup {
+.popup {
 	background-color: rgb(238, 238, 238);
 	width: 250px;
 	z-index: 1;
 	position: absolute;
-	right: 200px;
 	padding: 20px;
 	border: 1px solid rgb(214, 214, 214);
 	-moz-box-shadow: 3px 3px 3px #888;
@@ -153,17 +152,26 @@ input[type=submit]:hover, input[type=button]:hover {
 	box-shadow: 3px 3px 3px #888;
 }
 
-#signupPopup input[type=text] {
+.popup input {
 	width: 95%;
 	margin-top: 5px;
 }
 
-#signupPopup p {
+.popup p {
 	margin: 10px 0 10px 0;
 }
 
+#signupPopup, #loginPopup {
+	top: 50px;
+	right: 90px;
+}
+
+input[type=button], input[type=submit] {
+	width: 60px;
+}
+
 .submitButton {
-	margin-left: 10px;
+	margin: 10px 0 0 10px;
 	padding: 10px;
 	background-color: #61D7A4;
 	float: right;
@@ -171,6 +179,7 @@ input[type=submit]:hover, input[type=button]:hover {
 }
 
 .cancelButton {
+	margin: 10px 0 0 10px;
 	padding: 5px;
 	background-color: #FF9B73;
 	float: right;
