--- a/css/homepage.css
+++ b/css/homepage.css
@@ -55,8 +55,8 @@
 }
 
 #urlSubmit {
-	width: 590px;
-	height: 340px;
+	width: 350px;
+	height: inherit;
 	margin-top: 40px;
 }
 
@@ -65,27 +65,27 @@
 }
 
 #urlSubmit textarea {
-	width: 561px;
+	width: 95%;
 }
 
-#urlSubmit p {
+/* #urlSubmit p {
 	margin-left: 235px;
-}
+} */
 
-#controlContainer {
+/* #controlContainer {
 	float: right;
 	margin-right: 7px;
-}
+} */
 
 #scoreDistribution {
 	display: none !important;
 }
 
-#assocCo {
+/* #assocCo {
 	width: 40%;
 	margin-top: 15px;
 }
-
+ */
 #submit, #cancel {
 	float: right;
 }
