--- a/css/homepage.css
+++ b/css/homepage.css
@@ -27,6 +27,10 @@
 	float: left;
 }
 
+#urlContainer {
+	margin-bottom: 0px !important;
+}
+
 #urlButton, #urlInput {
 	position: absolute;
 }
@@ -57,7 +61,7 @@
 #urlSubmit {
 	width: 350px;
 	height: inherit;
-	margin-top: 40px;
+	margin-top: 50px;
 }
 
 #urlSubmit input, textarea {
