made lots of little changes
colored borders on each comment, pulled in number of claims and
comments, fixed some styling with tabs page

--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -103,6 +103,13 @@ hr {
 #leftCol {
 	float: left;
 	width: 50%;
+	border-right: 1px solid rgb(213, 213, 213);
+}
+
+
+#rightCol {
+	float: left;
+	width: 49.8%;
 }
 
 #leftCol, #scoreDistribution, #evidenceContent, #controlContainer, #relatedTagsContainer, #discussionContent{
@@ -171,12 +178,6 @@ hr {
 
 .selectedRating {
 	border: 2px solid black !important;
-}
-
-#rightCol {
-	float: left;
-	width: 49.8%;
-	border-left: 1px solid rgb(213, 213, 213);
 }
 
 .lowRatedClaims, .highRatedClaims {
