fixed merge conflicts

--- a/css/general.css
+++ b/css/general.css
@@ -151,14 +151,14 @@ footer {
 
 /*Main-----------------------------*/
 
-.main{
+#main{
 	width:915px;
 	margin:0px auto;
 	overflow: hidden;
 	/* border: 1px solid; */
 }
 
-.main > div {
+#main > div {
 	margin-bottom: 20px;
 }
 	
