--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -110,13 +110,35 @@ hr {
 
 #discussionContent li {
 	border-left: 5px solid;
-	padding: 10px;
+	padding-top: 0;
+	padding-left: 5px;
 	position: relative;
+	margin-bottom: 20px;
+}
+
+.thread {
+	border-left: 1px solid black;
+	overflow: hidden;
+}
+
+.buttonsContainer {
+	float: right;
+}
+
+.buttonsContainer .buttons {
+	margin: 2px 10px 0 0;
+	padding: 2px;
+	font-size: 10pt;
+}
+
+#discussionContent textarea {
+	float: left;
+	margin-right: 10px;
+	width: 100%;
 }
 
 .discussionOptions {
 	float: right;
-	
 }
 
 #leftCol {
@@ -265,7 +287,8 @@ hr {
 }
 
 #newCommentPopup {
-	top: 0;
+	position: fixed;
+	top: 20%;
 	left: 50%;
 	width: 400px;
 	margin-left: -200px;
