--- a/css/general.css
+++ b/css/general.css
@@ -11,8 +11,8 @@ body, html{
 }
 
 html {
-position: relative;
-min-height: 100%;
+	position: relative;
+	min-height: 100%;
 }
 
 body{
@@ -20,6 +20,18 @@ body{
 	font-family: Cambria;
 	font-size: 14px;
 	margin: 0 0 110px;
+}
+
+.lightsout {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 100;
+	background-color: black;
+	opacity: 0.7;
+	display: none;
+	text-align: left;
 }
 
 a, input, label, li, textarea, #urlButton, button {
@@ -173,7 +185,7 @@ input {
 .popup {
 	background-color: rgb(238, 238, 238);
 	width: 250px;
-	z-index: 1;
+	z-index: 200;
 	position: absolute;
 	padding: 20px;
 	border: 1px solid rgb(214, 214, 214);
