fixed is_logged_in, to fix treemap

--- a/css/treemap.css
+++ b/css/treemap.css
@@ -1,5 +1,5 @@
 #treemapCanvas {
-	margin: auto;
-	margin-top: 50px;
+	margin-top: 50px !important;
+	margin-bottom: 0px !important;
 	width: 100% !important;
 }
