able to submit claims now
TODO: still need to autocomplete company and claim tags box and properly
link company name with id and also update the company's overall rating

--- a/css/ccStyles.css
+++ b/css/ccStyles.css
@@ -1,7 +1,7 @@
 /*-------------------------General---------------------------------*/
 
 	ul {
-		display: inline;
+		/*display: inline;*/
 	}
 
 	li {
